# Projet-FAQ

./: .env.template  .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy-fastapi.yml  deploy-frontend.yml  deploy-infra.yml  test.yml
api/: index.py
benchmark/: README.md
data/: annotation_a_JC.csv  annotation_a_SDS.csv  annotation_b_JC.csv  annotation_b_SDS.csv  annotation_c_JC.csv  annotation_c_SDS.csv
docs/: 3-NOTE_CADRAGE.md  4-RAPPORT_BENCHMARK.md  NOTE_CADRAGE.md  README.md  Rapport_veille.md
docs/archives/: README_OLD.md
notebooks/: README.md  annotations.py  automated_benchmark.py  benchmark_analysis.py  comparaison_embedings.py
scripts/: benchmark.py  compute_embeding.py  data_loader.py  evaluate.py  mistral_ex.py  modal_embeddings.py  run_api.py  seed_db.py  strat_c.py  strat_retreival.py  test_google.py  test_mistral.py  test_strategies.py  test_streamllm.py  test_system_prompt.py
scripts/hf_utils/: get_provider.py  providers_mistral.py
src/: README.md  llm.py  qna.py  rag.py
src/api/: dependencies.py  main.py  routes.py
src/app/: main.py  routes.py
src/frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
src/infra/: app.py  config.py  embedding.py  image.py  retrieval.py
src/models/: llm.py  qna.py  rag.py
src/strategies/: __init__.py  abstract.py  strategya.py  strategyb.py  strategyc.py
src/utils/: data_loader.py
tests/: test_config.py  test_db.py  test_routes.py
tests/api/: test_dependencies.py  test_main.py  test_routes.py
(+47 files in other folders)
