[project]
name = "projet-faq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "marimo>=0.19.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "transformers>=4.57.5",
]
