[project]
name = "projet-faq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.7",
    "fastembed>=0.7.4",
    "google-genai>=1.62.0",
    "jsonref>=1.1.0",
    "langchain-huggingface>=1.2.0",
    "mistralai>=1.12.0",
    "modal>=1.3.2",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "ragas>=0.4.3",
    "supabase>=2.28.0",
]

[dependency-groups]
dev = [
    "ipython>=8.38.0",
    "marimo>=0.19.2",
    "pandas>=2.3.3",
    "protobuf>=6.33.4",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "transformers>=4.57.5",
]
